--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Little lemon is a fine dine restaurant with great food and online seat reservation convinience"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="og:title" content="Little lemon" />
+    <meta
+      name="og:description"
+      content="Little lemon is a fine dine restaurant with great food and online seat reservation convinience"
+    />
+    <meta name="og:image" content="../images/footer" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -24,7 +35,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Markazi+Text:wght@500&family=Roboto&display=swap" rel="stylesheet">
+    <title>Little Lemon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
